Fixed z-index on popup
Bug: 61023

--- a/MwEmbedModules/EmbedPlayer/resources/skins/EmbedPlayer.css
+++ b/MwEmbedModules/EmbedPlayer/resources/skins/EmbedPlayer.css
@@ -144,7 +144,7 @@ ul.ui-provider-selection li a {
 
 
 /* Custom */
-.mv-player .overlay-win { background: transparent; border: 0; } /* Custom */
+.mv-player .overlay-win { background: transparent; border: 0; z-index: 3; } /* Custom */
 .mv-player .overlay-content { padding: 10px; }
 .mv-player .overlay-content h3 { display: block; font-size: 16px; font-weight: bold; color: #fff; font-family: arial; }
 .mv-player .overlay-win h2 { font-size: 18px; margin-top: 0; }
